Updated many functionalities

--- a/app/modules/nav/styles/nav.scss
+++ b/app/modules/nav/styles/nav.scss
@@ -1,2 +1,14 @@
 // Module styling
 
+#navbar-wrapper {
+	height: 80px;
+}
+
+#navbar {
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	z-index: 3;
+	background-color: #fff;
+}
